--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": "true",
   "scripts": {
+    "build": "sh ./build.sh",
     "lint": "eslint *.js **/*.js"
   },
   "devDependencies": {
