--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint *.js **/*.js"
   },
   "devDependencies": {
-    "eslint": "^8.36.0"
+    "eslint": "^8.36.0",
+    "vite": "^4.2.0"
   }
 }
