--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint *.js **/*.js"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.224",
     "eslint": "^8.36.0",
     "vite": "^4.2.0"
   }
