--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/chrome": "^0.0.224",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "eslint": "^8.36.0",
+    "typescript": "^5.0.2",
     "vite": "^4.2.0"
   }
 }
