save tab state per site

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,7 +24,8 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "webNavigation"
   ],
   "content_scripts": [
     {
