add host permissions to be able to show correct badge state

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,6 +27,9 @@
     "storage",
     "webNavigation"
   ],
+  "host_permissions": [
+    "*://*/*"
+  ],
   "content_scripts": [
     {
       "js": [
