--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,10 @@
     },
     "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
+        "indent": [
+            "error",
+            4
+        ],
         "quotes": [
             2,
             "single",
