--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
         "128": "images/icon-128.png"
     },
     "background": {
-        "service_worker": "background.js",
+        "service_worker": "scripts/sw-chrome.js",
         "type": "module"
     },
     "action": {
