--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
         "test": "vitest --run"
     },
     "devDependencies": {
-        "@types/chrome": "^0.0.233",
+        "@types/chrome": "^0.0.234",
         "@typescript-eslint/eslint-plugin": "^5.59.1",
         "eslint": "^8.39.0",
-        "happy-dom": "9.9.2",
+        "happy-dom": "^9.10.0",
         "typescript": "^5.0.2",
-        "vite": "^4.2.0",
+        "vite": "^4.3.3",
         "vitest": "^0.30.1"
     }
 }
