--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
     "manifest_version": 3,
     "name": "Time Travel",
     "description": "Spoof the current date and time seen by websites. Useful for debugging frontend applications that depend on the time.",
-    "version": "0.0.7",
+    "version": "__VERSION__",
+    "version_name": "__VERSION_NAME__",
     "minimum_chrome_version": "102",
     "icons": {
         "16": "images/icon-16.png",
