--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Time Travel",
-    "description": "Spoof the current date and time seen by websites. Useful for debugging frontend applications that depend on the time.",
+    "description": "Spoof the current date and time seen by websites. Useful for debugging frontend apps that depend on the time.",
     "version": "__VERSION__",
     "version_name": "__VERSION_NAME__",
     "minimum_chrome_version": "102",
