--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,8 +14,9 @@ jobs:
         node-version: [18.x, 20.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         fetch-tags: true
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
