--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "sh ./util/build.sh production",
         "dev": "sh ./util/build.sh dev",
-        "lint": "tsc && eslint *.ts src/ && prettier src --check",
+        "lint": "tsc && eslint *.mts src/ && prettier src --check",
         "prettier": "prettier src --write",
         "test": "vitest --run"
     },
