--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
         "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@tsconfig/svelte": "^5.0.4",
         "@types/chrome": "^0.0.301",
-        "@typescript-eslint/eslint-plugin": "^8.23.0",
         "eslint": "^9.19.0",
         "happy-dom": "^17.0.0",
         "prettier": "^3.4.2",
         "svelte": "^5.19.9",
         "svelte-check": "^4.1.4",
         "typescript": "^5.5.4",
+        "typescript-eslint": "^8.23.0",
         "vite": "^6.1.0",
         "vitest": "^3.0.5"
     }
