--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,7 @@
             "48": "images/icon-48.png",
             "128": "images/icon-128.png"
         },
-        "default_popup": "popup/popup.html"
+        "default_popup": "popup/main.html"
     },
     "permissions": ["activeTab", "scripting"]
 }
