--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "typescript-eslint": "^8.23.0",
         "vite": "^6.1.0",
         "vitest": "^3.0.5"
+    },
+    "dependencies": {
+        "@svelte-plugins/datepicker": "^1.0.11"
     }
 }
