--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
             "ESNext"
         ],
         "allowJs": false,
-        "skipLibCheck": false,
+        "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
