--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,5 +23,5 @@ jobs:
     - run: npm run build
     - uses: actions/upload-artifact@v4
       with:
-        name: time-travel-${{ github.ref_name }}.zip
-        path: dist/*.zip
+        name: time-travel-${{ github.ref_name }}
+        path: dist/
