--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[yaml]": {
+        "editor.formatOnSave": false
+    },
     "editor.codeActionsOnSave": {
         "source.organizeImports": "always"
     }
