--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,4 +39,4 @@ jobs:
         CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
         REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
         EXTENSION_ID: jfdbpgcmmenmelcghpbbkldkcfiejcjg
-      run: chrome-webstore-upload upload --source upload-cws/time-travel-${{ github.ref_name }}.zip
+      run: npx chrome-webstore-upload upload --source upload-cws/time-travel-${{ github.ref_name }}.zip
