--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,27 +25,10 @@ jobs:
       with:
         name: time-travel-${{ github.ref_name }}
         path: dist/
-  upload-cws:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        fetch-tags: true
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    - run: npm ci
-    - uses: actions/download-artifact@v4
-      with:
-        name: time-travel-${{ github.ref_name }}
-        path: upload-cws/
     - name: Upload to Chrome Web Store
       env:
         CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
         CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
         REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
         EXTENSION_ID: jfdbpgcmmenmelcghpbbkldkcfiejcjg
-      run: npx chrome-webstore-upload upload --source upload-cws/time-travel-${{ github.ref_name }}.zip
+      run: cd dist/ && npx chrome-webstore-upload upload
