--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1",
         "vite": "^6.1.1",
-        "vitest": "^3.0.6"
+        "vitest": "^3.0.6",
+        "web-ext": "^8.4.0"
     },
     "dependencies": {
         "@svelte-plugins/datepicker": "^1.0.11",
