--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
         "128": "images/icon-128.png"
     },
     "background": {
-        "service_worker": "scripts/sw-chrome.js",
+        "service_worker": "scripts/worker.js",
         "type": "module"
     },
     "action": {
