--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -3,6 +3,10 @@
         "gecko": {
             "id": "time@travel",
             "strict_min_version": "128.0"
+        },
+        "gecko_android": {
+            "id": "time@travel",
+            "strict_min_version": "128.0"
         }
     },
     "content_scripts": [
