--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -9,6 +9,9 @@
             "strict_min_version": "128.0"
         }
     },
+    "action": {
+        "default_area": "navbar"
+    },
     "content_scripts": [
         {
             "matches": ["http://*/*", "https://*/*", "file://*/*"],
