--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,17 @@ jobs:
       with:
         fetch-depth: 0
         fetch-tags: true
-    - uses: actions/setup-node@v3
+    - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4
+      with:
+        version: 9
+    - uses: actions/setup-node@v4
       with:
         node-version: '20.x'
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run test
-    - run: npm run build
+        cache: 'pnpm'
+    - run: pnpm i
+    - run: pnpm lint
+    - run: pnpm test
+    - run: pnpm build
     - name: Create Chrome artifact
       uses: actions/upload-artifact@v4
       with:
