--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
             "DOM.Iterable",
             "ESNext"
         ],
-        "allowJs": false,
+        "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
