--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "vite": "^6.2.1",
         "vitest": "^3.0.8",
         "web-ext": "^8.4.0",
-        "@inlang/paraglide-js": "2.0.1",
+        "@inlang/paraglide-js": "^2.0.1",
         "@inlang/cli": "^3.0.0"
     },
     "dependencies": {
