adjust final newline settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     },
     "editor.codeActionsOnSave": {
         "source.organizeImports": "always"
-    }
+    },
+    "files.insertFinalNewline": true
 }
