--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true,
-  "printWidth": 120
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 120,
+    "endOfLine": "lf"
 }
