feat: add stricter CSP for popup

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,5 +25,8 @@
         },
         "default_popup": "popup/main.html"
     },
-    "permissions": ["activeTab", "scripting"]
+    "permissions": ["activeTab", "scripting"],
+    "content_security_policy": {
+        "extension_pages": "default-src 'self';"
+    }
 }
