fix: enable data URLs for images (used by datepicker)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,6 +27,6 @@
     },
     "permissions": ["activeTab", "scripting"],
     "content_security_policy": {
-        "extension_pages": "default-src 'self';"
+        "extension_pages": "default-src 'self'; img-src 'self' data:;"
     }
 }
