--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
         "machine-translate": "inlang machine translate --project project.inlang"
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@eslint/js": "^9.28.0",
+        "@sveltejs/vite-plugin-svelte": "^5.1.0",
         "@tsconfig/svelte": "^5.0.4",
-        "@types/chrome": "^0.0.319",
-        "chrome-webstore-upload-cli": "^3.3.1",
-        "eslint": "^9.26.0",
-        "happy-dom": "^17.4.6",
+        "@types/chrome": "^0.0.326",
+        "chrome-webstore-upload-cli": "^3.3.2",
+        "eslint": "^9.29.0",
+        "happy-dom": "^18.0.1",
         "prettier": "^3.5.3",
-        "svelte-check": "^4.1.7",
+        "svelte-check": "^4.2.2",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.31.1",
-        "vite": "^6.3.4",
-        "vitest": "^3.1.2",
-        "web-ext": "^8.6.0",
-        "@inlang/paraglide-js": "^2.0.12",
-        "@inlang/cli": "^3.0.11"
+        "typescript-eslint": "^8.34.1",
+        "vite": "^6.3.5",
+        "vitest": "^3.2.4",
+        "web-ext": "^8.8.0",
+        "@inlang/paraglide-js": "^2.1.0",
+        "@inlang/cli": "^3.0.12"
     },
     "dependencies": {
         "@svelte-plugins/datepicker": "^1.0.11",
-        "svelte": "^5.28.2"
+        "svelte": "^5.34.7"
     }
 }
