--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "build": "sh ./util/build.sh production",
         "dev": "sh ./util/build.sh dev",
-        "lint": "tsc && eslint *.mts src/ && prettier src --check && svelte-check --tsconfig ./tsconfig.json",
+        "lint": "tsc && eslint *.mts src/ && prettier src --check && svelte-check --tsconfig ./tsconfig.json && pnpm lint:translations",
+        "lint:translations": "bash ./util/check-translations.sh",
         "prettier": "prettier src --write",
         "test": "vitest --run",
         "checkall": "pnpm test && pnpm lint && pnpm build",
