--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.34.0",
+        "@inlang/cli": "^3.0.12",
+        "@inlang/paraglide-js": "^2.2.0",
         "@sveltejs/vite-plugin-svelte": "^6.1.3",
         "@tsconfig/svelte": "^5.0.5",
         "@types/chrome": "^0.1.4",
@@ -24,15 +26,13 @@
         "prettier": "^3.6.2",
         "svelte-check": "^4.3.1",
         "typescript": "^5.9.2",
-        "typescript-eslint": "^8.40.0",
+        "typescript-eslint": "^8.41.0",
         "vite": "^7.1.3",
         "vitest": "^3.2.4",
-        "web-ext": "^8.9.0",
-        "@inlang/paraglide-js": "^2.2.0",
-        "@inlang/cli": "^3.0.12"
+        "web-ext": "^8.9.0"
     },
     "dependencies": {
         "@svelte-plugins/datepicker": "^1.0.11",
-        "svelte": "^5.38.3"
+        "svelte": "^5.38.6"
     }
 }
