move worker.ts out of scripts (not a content script)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
         "128": "images/icon-128.png"
     },
     "background": {
-        "service_worker": "scripts/worker.js",
+        "service_worker": "worker.js",
         "type": "module"
     },
     "action": {
