adjust formatter settings and re-add semicolons
I repent. JavaScript syntax is odd without semicolons, even though it
works most of the time. Prettier auto-inserting semicolons in strange
places is helpful to understand the corner cases, but not actually
pretty. And the language server seems to do odd things without them as
well.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
-    "typescript.format.semicolons": "remove",
+    "typescript.format.semicolons": "insert",
     "[typescript][json][css][html]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
