--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
     "trailingComma": "es5",
     "tabWidth": 4,
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "printWidth": 120,
     "endOfLine": "lf"
 }
+
