--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint": "^9.35.0",
         "happy-dom": "^18.0.1",
         "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
         "svelte-check": "^4.3.1",
         "typescript": "^5.9.2",
         "typescript-eslint": "^8.42.0",
