--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@types/chrome": "^0.1.9",
         "chrome-webstore-upload-cli": "^3.4.0",
         "eslint": "^9.35.0",
+        "eslint-plugin-svelte": "^3.12.3",
+        "globals": "^16.4.0",
         "happy-dom": "^18.0.1",
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
