--- a/package.json
+++ b/package.json
@@ -14,28 +14,32 @@
         "machine-translate": "inlang machine translate --project project.inlang"
     },
     "devDependencies": {
-        "@eslint/js": "^9.36.0",
+        "@eslint/js": "^9.39.0",
         "@inlang/cli": "^3.0.12",
         "@inlang/paraglide-js": "^2.4.0",
         "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tsconfig/svelte": "^5.0.5",
-        "@types/chrome": "^0.1.16",
-        "chrome-webstore-upload-cli": "^3.4.0",
-        "eslint": "^9.36.0",
-        "eslint-plugin-svelte": "^3.12.4",
+        "@types/chrome": "^0.1.27",
+        "chrome-webstore-upload-cli": "^3.5.0",
+        "eslint": "^9.39.0",
+        "eslint-plugin-svelte": "^3.13.0",
         "globals": "^16.4.0",
-        "happy-dom": "^19.0.2",
+        "happy-dom": "^20.0.10",
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
-        "svelte-check": "^4.3.2",
+        "svelte-check": "^4.3.3",
         "typescript": "^5.9.3",
-        "typescript-eslint": "^8.45.0",
-        "vite": "^7.1.7",
-        "vitest": "^3.2.4",
-        "web-ext": "^8.10.0"
+        "typescript-eslint": "^8.46.2",
+        "vite": "^7.1.12",
+        "vitest": "^4.0.6",
+        "web-ext": "^9.1.0"
     },
     "dependencies": {
         "@svelte-plugins/datepicker": "^1.0.11",
-        "svelte": "^5.39.7"
+        "svelte": "^5.43.2"
+    },
+    "overrides": {
+        "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+        "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2"
     }
 }
